--- a/.env.example
+++ b/.env.example
@@ -122,6 +122,6 @@ NPG_AUTHORIZATION_ERROR_CODE_MAPPING={"907":"25","908":"25","909":"25","110":"3"
 ECOMMERCE_FINAL_STATES=NOTIFIED_OK,NOTIFIED_KO,NOTIFICATION_ERROR,NOTIFICATION_REQUESTED,EXPIRED,REFUNDED,CANCELED,UNAUTHORIZED,REFUND_ERROR,REFUND_REQUESTED,CANCELLATION_EXPIRED
 ECOMMERCE_POSSIBLE_FINAL_STATES=AUTHORIZATION_COMPLETED,CLOSURE_REQUESTED,CLOSURE_ERROR
 
-JWT_ISSUER_URI="https://weuprod.ecommerce.internal.platform.pagopa.it/pagopa-jwt-issuer-service"
+JWT_ISSUER_URI="http://localhost/pagopa-jwt-issuer-service"
 JWT_ISSUER_READ_TIMEOUT=10000
 JWT_ISSUER_CONNECTION_TIMEOUT=10000
