Revert "[CHK-4175] update auth request jwt token generation (#636)"
This reverts commit 1b4ad2754e77e6bab7596dd61d6043107f75bd06.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -59,6 +59,9 @@ transactions.ecommerce.retry.offset=${TRANSACTIONS_RETRY_OFFSET}
 
 transactions.closure_handler.retry_interval=${CLOSURE_RETRY_INTERVAL}
 
+jwt.ecommerce.secretKey=${JWT_ECOMMERCE_SECRET}
+jwt.ecommerceWebView.secretKey=${JWT_ECOMMERCE_WEBVIEW_SECRET}
+npg.notification.jwt.secret=${JWT_NPG_NOTIFICATION_SECRET}
 npg.notification.jwt.validity.time=${JWT_NPG_NOTIFICATION_VALIDITY_TIME}
 
 confidentialDataManager.personalDataVault.apiKey=${PERSONAL_DATA_VAULT_API_KEY}
