Revert "Chk 4173 post transactions jwt issuer revert (#644)"
This reverts commit a5afaf544fb76d769fc10b485a60be063bdb597a.

--- a/.env.example
+++ b/.env.example
@@ -124,3 +124,7 @@ OTEL_TRACES_SAMPLER=always_off
 NPG_AUTHORIZATION_ERROR_CODE_MAPPING={"907":"25","908":"25","909":"25","110":"3","111":"7","210":"3","115":"25","116":"116","413":"2","117":"117","118":"3","119":"2","911":"25","999":"25","913":"25","120":"2","121":"121","100":"2","122":"2","101":"7","123":"2","200":"2","102":"2","124":"2","125":"3","202":"2","104":"3","126":"2","204":"2","106":"2","129":"2","888":"2","109":"25","208":"3","209":"3","902":"2","903":"2","904":"25","906":"25"}
 ECOMMERCE_FINAL_STATES=NOTIFIED_OK,NOTIFIED_KO,NOTIFICATION_ERROR,NOTIFICATION_REQUESTED,EXPIRED,REFUNDED,CANCELED,UNAUTHORIZED,REFUND_ERROR,REFUND_REQUESTED,CANCELLATION_EXPIRED
 ECOMMERCE_POSSIBLE_FINAL_STATES=AUTHORIZATION_COMPLETED,CLOSURE_REQUESTED,CLOSURE_ERROR
+
+JWT_ISSUER_URI="http://localhost/pagopa-jwt-issuer-service"
+JWT_ISSUER_READ_TIMEOUT=10000
+JWT_ISSUER_CONNECTION_TIMEOUT=10000
