--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -121,3 +121,7 @@ server.shutdown=graceful
 spring.lifecycle.timeout-per-shutdown-phase=30s
 
 exclusiveLockDocument.ttlSeconds=${EXCLUSIVE_LOCK_DOCUMENT_TTL_SECONDS:2}
+
+jwtissuer.uri=${JWT_ISSUER_URI}
+jwtissuer.readTimeout=${JWT_ISSUER_READ_TIMEOUT}
+jwtissuer.connectionTimeout=${JWT_ISSUER_CONNECTION_TIMEOUT}
