--- a/pom.xml
+++ b/pom.xml
@@ -564,6 +564,8 @@
                     <connectionUrl>scm:git:https://github.com/pagopa/pagopa-ecommerce-commons.git</connectionUrl>
                     <scmVersionType>tag</scmVersionType>
                     <scmVersion>${pagopa-ecommerce-commons.version}</scmVersion>
+                    <scmVersionType>branch</scmVersionType>
+                    <scmVersion>PIDM-559-565-upgrade-springboot3-ecommerce-commons</scmVersion>
                     <goals>install -DskipTests</goals>
                 </configuration>
                 <executions>
