feat: protect all api by api key

--- a/.env.example
+++ b/.env.example
@@ -122,3 +122,7 @@ ECOMMERCE_POSSIBLE_FINAL_STATES=AUTHORIZATION_COMPLETED,CLOSURE_REQUESTED,CLOSUR
 JWT_ISSUER_URI="http://localhost/pagopa-jwt-issuer-service"
 JWT_ISSUER_READ_TIMEOUT=10000
 JWT_ISSUER_CONNECTION_TIMEOUT=10000
+
+SECURITY_API_KEYS_SECURED_PATHS=/transactions,/v2/transactions,/v2.1/transactions
+SECURITY_API_KEYS_PRIMARY=primary-key
+SECURITY_API_KEYS_SECONDARY=secondary-key
