--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -102,3 +102,8 @@ ecommerce.possibleFinalStates=AUTHORIZATION_COMPLETED,CLOSURE_REQUESTED,CLOSURE_
 jwtissuer.uri=http://localhost/jwtissuer
 jwtissuer.readTimeout=10000
 jwtissuer.connectionTimeout=10000
+
+
+security.apiKey.securedPaths=/transactions,/v2/transactions,/v2.1/transactions
+security.apiKey.primary=primary-key
+security.apiKey.secondary=secondary-key
