--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -122,3 +122,7 @@ exclusiveLockDocument.ttlSeconds=${EXCLUSIVE_LOCK_DOCUMENT_TTL_SECONDS:2}
 jwtissuer.uri=${JWT_ISSUER_URI}
 jwtissuer.readTimeout=${JWT_ISSUER_READ_TIMEOUT}
 jwtissuer.connectionTimeout=${JWT_ISSUER_CONNECTION_TIMEOUT}
+
+security.apiKey.securedPaths=${SECURITY_API_KEYS_SECURED_PATHS}
+security.apiKey.primary=${SECURITY_API_KEYS_PRIMARY}
+security.apiKey.secondary=${SECURITY_API_KEYS_SECONDARY}
