--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -182,6 +182,7 @@ microservice-chart:
     JWT_ISSUER_URI: "https://weuuat.ecommerce.internal.uat.platform.pagopa.it/pagopa-jwt-issuer-service"
     JWT_ISSUER_READ_TIMEOUT: "10000"
     JWT_ISSUER_CONNECTION_TIMEOUT: "10000"
+    SECURITY_API_KEYS_SECURED_PATHS: "/transactions,/v2/transactions,/v2.1/transactions"
   envSecret:
     NODO_NODEFORECOMMERCE_API_KEY: node-for-ecommerce-api-v2-key
     NODO_NODEFORPSP_API_KEY: nodo-nodeforpsp-api-key
@@ -204,6 +205,8 @@ microservice-chart:
     NPG_SATISPAY_PSP_KEYS: npg-satispay-psp-keys
     NPG_APPLEPAY_PSP_KEYS: npg-apple-pay-psp-keys
     NPG_GOOGLE_PAY_PSP_KEYS: npg-google-pay-psp-keys
+    SECURITY_API_KEYS_PRIMARY: ecommerce-transactions-service-primary-api-key
+    SECURITY_API_KEYS_SECONDARY: ecommerce-transactions-service-secondary-api-key
   keyvault:
     name: "pagopa-u-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
