--- a/.env.example
+++ b/.env.example
@@ -107,7 +107,7 @@ AUTH_REQUESTED_EVENT_VISIBILITY_TIMEOUT_SECONDS=0
 
 CHECKOUT_NPG_GDI_URL="https://dev.checkout.pagopa.it/gdi-check"
 CHECKOUT_OUTCOME_URL="https://dev.checkout.pagopa.it/esito"
-REDIRECT_PAYMENT_TYPE_CODE_DESCRIPTION_MAPPING={"RBPR":"Poste addebito in conto Retail","RBPB":"Poste addebito in conto Business","RBPP":"Paga con BottonePostePay","RPIC":"Pago in Conto Intesa","RBPS":"SCRIGNO Internet Banking","RICO":"Conto ICONTO","KLAR":"Klarna (anche a rate)"}
+REDIRECT_PAYMENT_TYPE_CODE_DESCRIPTION_MAPPING={"RBPR":"Poste addebito in conto Retail","RBPB":"Poste addebito in conto Business","RBPP":"Paga con BottonePostePay","RPIC":"Pago in Conto Intesa","RBPS":"SCRIGNO Internet Banking","RICO":"Conto ICONTO","KLRN":"Klarna (anche a rate)"}
 
 #disable open telemetry locally
 OTEL_TRACES_EXPORTER=none
