feat(api-key): add api key to jwt-issuer webclient

--- a/.env.example
+++ b/.env.example
@@ -122,3 +122,4 @@ ECOMMERCE_POSSIBLE_FINAL_STATES=AUTHORIZATION_COMPLETED,CLOSURE_REQUESTED,CLOSUR
 JWT_ISSUER_URI="http://localhost/pagopa-jwt-issuer-service"
 JWT_ISSUER_READ_TIMEOUT=10000
 JWT_ISSUER_CONNECTION_TIMEOUT=10000
+JWT_ISSUER_API_KEY=primary-key
