--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -109,3 +109,13 @@ stages:
             testResultsFormat: 'JUnit'
             testResultsFiles: '**/*-TEST.xml' 
             searchFolder: '$(System.DefaultWorkingDirectory)'
+        - script: |
+            echo "Printing logs for all running containers:"
+            for container in $(docker ps -q); do
+              name=$(docker inspect --format='{{.Name}}' $container | sed 's/^\/\(.*\)/\1/')
+              echo "===== Logs for $name ====="
+              docker logs $container
+              echo "===== End of logs for $name ====="
+            done
+          displayName: 'Print Docker container logs'
+
