feat(api-key): add docker logs

--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -117,5 +117,6 @@ stages:
               docker logs $container
               echo "===== End of logs for $name ====="
             done
+          condition: always()
           displayName: 'Print Docker container logs'
 
