[CHK-4288] feat(api-key): add api key to jwt-issuer webclient (#655)
* feat(api-key): add api key to jwt-issuer webclient

* feat(api-key): chore

* trigger cr pipeline

* trigger cr pipeline

* feat(api-key): add docker logs

* feat(api-key): add docker logs

* feat(api-key): chore

* feat(api-key): chore

* feat(api-key): chore

* feat(api-key): fix app property

* Update code-review-pipelines.yml

--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -99,9 +99,10 @@ node.forwarder.connectionTimeout=10000
 ecommerce.finalStates=NOTIFIED_OK,NOTIFIED_KO,NOTIFICATION_ERROR,NOTIFICATION_REQUESTED,EXPIRED,REFUNDED,CANCELED,UNAUTHORIZED,REFUND_ERROR,REFUND_REQUESTED,CANCELLATION_EXPIRED
 ecommerce.possibleFinalStates=AUTHORIZATION_COMPLETED,CLOSURE_REQUESTED,CLOSURE_ERROR
 
-jwtissuer.uri=http://localhost/jwtissuer
+jwtissuer.uri=http://localhost:8080
 jwtissuer.readTimeout=10000
 jwtissuer.connectionTimeout=10000
+jwtissuer.apiKey=primary-key
 
 
 security.apiKey.securedPaths=/transactions,/v2/transactions,/v2.1/transactions
