--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -211,6 +211,7 @@ microservice-chart:
     NPG_GOOGLE_PAY_PSP_KEYS: npg-google-pay-psp-keys
     SECURITY_API_KEYS_PRIMARY: ecommerce-transactions-service-primary-api-key
     SECURITY_API_KEYS_SECONDARY: ecommerce-transactions-service-secondary-api-key
+    JWT_ISSUER_API_KEY: ecommerce-jwt-issuer-service-active-api-key
   keyvault:
     name: "pagopa-d-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
