--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -24,6 +24,13 @@ microservice-chart:
       TRANSACTIONS_AUTHORIZATION_REQUESTED_QUEUE_NAME: pagopa-u-weu-ecommerce-transaction-auth-requested-queue-b
       OTEL_RESOURCE_ATTRIBUTES: "service.name=pagopa-ecommerce-transactions-service-blue,deployment.environment=uat"
       ECS_SERVICE_NAME: pagopa-ecommerce-transactions-service-blue
+      NODE_FOR_PSP_URI: /ecommerce/mock/nodo/v1/activatePaymentNotice
+      NODO_PER_PM_URI: /ecommerce/mock/nodoPerPM/v1
+      ECOMMERCE_PAYMENT_METHODS_URI_V2: https://weuuat.ecommerce.internal.uat.platform.pagopa.it/beta/pagopa-ecommerce-payment-methods-service/v2
+      PERSONAL_DATA_VAULT_API_BASE_PATH: "https://api.uat.platform.pagopa.it/ecommerce/mock/pdv/v1"
+      NPG_URI: "https://api.uat.platform.pagopa.it/ecommerce/mock/npg/v1"
+      AUTH_REQUESTED_EVENT_VISIBILITY_TIMEOUT_SECONDS: "0"
+      NODE_FORWARDER_URL: "https://api.uat.platform.pagopa.it/ecommerce/mock/node-forwader/v1"
     envSecret: {}
   image:
     repository: pagopaucommonacr.azurecr.io/pagopaecommercetransactionsservice
@@ -47,7 +54,12 @@ microservice-chart:
     periodSeconds: 10
   deployment:
     create: true
-    replicas: 1
+    replicas: 5
+  strategy:
+    type: "RollingUpdate"
+    rollingUpdate:
+      maxSurge: "100%"
+      maxUnavailable: "100%"
   service:
     create: true
     type: ClusterIP
@@ -70,15 +82,15 @@ microservice-chart:
     allowPrivilegeEscalation: false
   resources:
     requests:
-      memory: "512Mi"
+      memory: "768Mi"
       cpu: "300m"
     limits:
-      memory: "512Mi"
+      memory: "768Mi"
       cpu: "900m"
   autoscaling:
     enable: true
-    minReplica: 1
-    maxReplica: 5
+    minReplica: 5
+    maxReplica: 15
     pollingInterval: 30 # seconds
     cooldownPeriod: 30 # seconds
     triggers:
@@ -191,13 +203,13 @@ microservice-chart:
     REDIS_HOST: redis-ecommerce-hostname
     NOTIFICATIONS_SERVICE_API_KEY: notifications-service-api-key
     ECOMMERCE_STORAGE_TRANSIENT_CONNECTION_STRING: ecommerce-storage-transient-connection-string
-    PERSONAL_DATA_VAULT_API_KEY: personal-data-vault-api-key
+    PERSONAL_DATA_VAULT_API_KEY: ecommerce-load-test-subscription-key
     OTEL_EXPORTER_OTLP_HEADERS: elastic-otel-token-header
-    ECOMMERCE_PAYMENT_METHODS_APY_KEY: payment-method-api-key
+    ECOMMERCE_PAYMENT_METHODS_APY_KEY: ecommerce-load-test-subscription-key
     WALLET_API_KEY: wallet-api-key
     NPG_API_KEY: npg-api-key
     NPG_CARDS_PSP_KEYS: npg-cards-psp-keys
-    NODE_FORWARDER_API_KEY: node-forwarder-api-key
+    NODE_FORWARDER_API_KEY: ecommerce-load-test-subscription-key
     REDIRECT_URL_MAPPING: redirect-url-mapping
     NPG_PAYPAL_PSP_KEYS: npg-paypal-psp-keys
     NPG_BANCOMATPAY_PSP_KEYS: npg-bancomatpay-psp-keys
