chore: trigger tests against branch

--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -13,7 +13,7 @@ resources:
     - repository: pagopaEcommerceLocal
       type: github
       name: pagopa/pagopa-ecommerce-local 
-      ref: mongo-init-fi
+      ref: CHK-4331-ecommerce-cdc-mongo-configuration
       endpoint: 'io-azure-devops-github-ro'
 
 stages:
