feat: introduce configuration to toggle writing to transactions-view collection (TRANSACTIONSVIEW_UPDATE_ENABLED)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -127,3 +127,5 @@ jwtissuer.apiKey=${JWT_ISSUER_API_KEY}
 security.apiKey.securedPaths=${SECURITY_API_KEYS_SECURED_PATHS}
 security.apiKey.primary=${SECURITY_API_KEYS_PRIMARY}
 security.apiKey.secondary=${SECURITY_API_KEYS_SECONDARY}
+
+transactionsview.update.enabled=${TRANSACTIONSVIEW_UPDATE_ENABLED:true}
