--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -108,3 +108,5 @@ jwtissuer.apiKey=primary-key
 security.apiKey.securedPaths=/transactions,/v2/transactions,/v2.1/transactions
 security.apiKey.primary=primary-key
 security.apiKey.secondary=secondary-key
+
+transactionsview.update.enabled=${TRANSACTIONSVIEW_UPDATE_ENABLED:true}
