--- a/.env.example
+++ b/.env.example
@@ -127,3 +127,5 @@ JWT_ISSUER_API_KEY=primary-key
 SECURITY_API_KEYS_SECURED_PATHS=/transactions,/v2/transactions,/v2.1/transactions
 SECURITY_API_KEYS_PRIMARY=primary-key
 SECURITY_API_KEYS_SECONDARY=secondary-key
+
+TRANSACTIONSVIEW_UPDATE_ENABLED=true
