chore(pipeline): [CHK-4349] remove task temporarily

--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -46,17 +46,17 @@ stages:
               docker run -p 10000:10000 -p 10001:10001 -p 10002:10002 mcr.microsoft.com/azure-storage/azurite &
           displayName: Run azurite to test Service - Storage integration
 
-        - task: Maven@4
-          inputs:
-            mavenPomFile: 'pom.xml'
-            mavenOptions: '-Xmx3072m $(MAVEN_OPTS)'
-            javaHomeOption: 'JDKVersion'
-            jdkVersionOption: '21'
-            jdkArchitectureOption: 'x64'
-            publishJUnitResults: false
-            testResultsFiles: '**/surefire-reports/TEST-*.xml'
-            goals: 'clean validate'
-            sonarQubeRunAnalysis: false
+#        - task: Maven@4
+#          inputs:
+#            mavenPomFile: 'pom.xml'
+#            mavenOptions: '-Xmx3072m $(MAVEN_OPTS)'
+#            javaHomeOption: 'JDKVersion'
+#            jdkVersionOption: '21'
+#            jdkArchitectureOption: 'x64'
+#            publishJUnitResults: false
+#            testResultsFiles: '**/surefire-reports/TEST-*.xml'
+#            goals: 'clean validate'
+#            sonarQubeRunAnalysis: false
 
         - task: Maven@4
           inputs:
