feat: enable Class Data Sharing jvm feat

--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -45,6 +45,7 @@ azurestorage.queues.transactionclosepaymentretry.name=closure-retry-queue
 azurestorage.queues.transactionclosepayment.name=closure-queue
 azurestorage.queues.transactionnotificationrequested.name=notification-requested-queue
 azurestorage.queues.transactionauthorizationrequested.name=authorization-requested-queue
+azurestorage.queues.transientQueues.ttlSeconds=0
 
 payment.token.validity=120
 transactions.ecommerce.retry.offset=20
@@ -55,6 +56,8 @@ npg.notification.jwt.validity.time=120
 
 confidentialDataManager.personalDataVault.apiKey=personal-data-vault-api-key
 confidentialDataManager.personalDataVault.apiBasePath=http://personal-data-vault-test-host/v1/api
+
+warmup.request.newTransaction.noticeCodePrefix=1234
 
 checkout.basePath=http://localhost/checkout
 checkout.npg.gdi.url=http://localhost/checkout/gdi-check
@@ -104,6 +107,7 @@ jwtissuer.readTimeout=10000
 jwtissuer.connectionTimeout=10000
 jwtissuer.apiKey=primary-key
 
+exclusiveLockDocument.ttlSeconds=1
 
 security.apiKey.securedPaths=/transactions,/v2/transactions,/v2.1/transactions
 security.apiKey.primary=primary-key
